-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs23
-
Component/s: hotspot
-
b14
-
generic
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2225825 | 8 | Christian Thalinger | P2 | Closed | Fixed | b44 |
| JDK-8018263 | 7u45 | Christian Thalinger | P2 | Closed | Fixed | b01 |
| JDK-8002579 | 7u40 | Christian Thalinger | P2 | Closed | Fixed | b01 |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (C:\jprt\T\P1\092016.rwestrel\s\src\share\vm\c1\c1_GraphBuilder.cpp:2128), pid=9448, tid=4196
# assert(cur_state != NULL) failed: state_before must be set
#
# JRE version: 7.0_04-b20
# Java VM: Java HotSpot(TM) Client VM (24.0-b12-internal-201206050920.rwestrel.hotspot-fastdebug compiled mode windows-x86 )
# Failed to write core dump. Minidumps are not enabled by default on client versions of Windows
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (C:\jprt\T\P1\092016.rwestrel\s\src\share\vm\c1\c1_GraphBuilder.cpp:2128), pid=9448, tid=4196
# assert(cur_state != NULL) failed: state_before must be set
#
# JRE version: 7.0_04-b20
# Java VM: Java HotSpot(TM) Client VM (24.0-b12-internal-201206050920.rwestrel.hotspot-fastdebug compiled mode windows-x86 )
# Failed to write core dump. Minidumps are not enabled by default on client versions of Windows
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
- backported by
-
JDK-2225825 C1: failures after 7171890: assert(cur_state != NULL) failed: state_before must be set
-
- Closed
-
-
JDK-8002579 C1: failures after 7171890: assert(cur_state != NULL) failed: state_before must be set
-
- Closed
-
-
JDK-8002580 C1: failures after 7171890: assert(cur_state != NULL) failed: state_before must be set
-
- Closed
-
-
JDK-8018263 C1: failures after 7171890: assert(cur_state != NULL) failed: state_before must be set
-
- Closed
-
- relates to
-
JDK-7171890 C1: add Class.isInstance intrinsic
-
- Resolved
-