7174884: C1: failures after 7171890: assert(cur_state != NULL) failed: state_before must be set

Reviewed-by: kvn